WIP intro + state of the art

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -453,3 +453,125 @@ address = {USA}
   keywords={Visualization;Cats;Dogs;Computer architecture;Knowledge discovery},
   doi={10.1109/ICCV.2017.74}
 }
+
+@article{Videbaek2015,
+  title = {Incidence of Running-Related Injuries Per 1000 h of running in Different Types of Runners: A Systematic Review and Meta-Analysis},
+  volume = {45},
+  ISSN = {1179-2035},
+  url = {http://dx.doi.org/10.1007/s40279-015-0333-8},
+  DOI = {10.1007/s40279-015-0333-8},
+  number = {7},
+  journal = {Sports Medicine},
+  publisher = {Springer Science and Business Media LLC},
+  author = {Videb\ae k, Solvej and Bueno, Andreas Moeballe and Nielsen, Rasmus Oestergaard and Rasmussen, Sten},
+  year = {2015},
+  month = may,
+  pages = {1017--1026}
+}
+
+
+
+@article{Willwacher2022,
+  title = {Running-Related Biomechanical Risk Factors for Overuse Injuries in Distance Runners: A Systematic Review Considering Injury Specificity and the Potentials for Future Research},
+  volume = {52},
+  ISSN = {1179-2035},
+  url = {http://dx.doi.org/10.1007/s40279-022-01666-3},
+  DOI = {10.1007/s40279-022-01666-3},
+  number = {8},
+  journal = {Sports Medicine},
+  publisher = {Springer Science and Business Media LLC},
+  author = {Willwacher,  Steffen and Kurz,  Markus and Robbin,  Johanna and Thelen,  Matthias and Hamill,  Joseph and Kelly,  Luke and Mai,  Patrick},
+  year = {2022},
+  month = mar,
+  pages = {1863–1877}
+}
+
+
+@article{Mamom2023,
+  title = {Electronic Alert Signal for Early Detection of Tissue Injuries in Patients: An Innovative Pressure Sensor Mattress},
+  volume = {13},
+  ISSN = {2075-4418},
+  url = {http://dx.doi.org/10.3390/diagnostics13010145},
+  DOI = {10.3390/diagnostics13010145},
+  number = {1},
+  journal = {Diagnostics},
+  publisher = {MDPI AG},
+  author = {Mamom,  Jinpitcha and Rungroungdouyboon,  Bunyong and Daovisan,  Hanvedes and Sri-Ngernyuang,  Chawakorn},
+  year = {2023},
+  month = jan,
+  pages = {145}
+}
+
+
+@article{Simon2004,
+title = {Quantification of human motion: gait analysis—benefits and limitations to its application to clinical problems},
+journal = {Journal of Biomechanics},
+volume = {37},
+number = {12},
+pages = {1869-1880},
+year = {2004},
+issn = {0021-9290},
+doi = {https://doi.org/10.1016/j.jbiomech.2004.02.047},
+url = {https://www.sciencedirect.com/science/article/pii/S0021929004001228},
+author = {Sheldon R. Simon},
+abstract = {The technology supporting the analysis of human motion has advanced dramatically. Past decades of locomotion research have provided us with significant knowledge about the accuracy of tests performed, the understanding of the process of human locomotion, and how clinical testing can be used to evaluate medical disorders and affect their treatment. Gait analysis is now recognized as clinically useful and financially reimbursable for some medical conditions. Yet, the routine clinical use of gait analysis has seen very limited growth. The issue of its clinical value is related to many factors, including the applicability of existing technology to addressing clinical problems; the limited use of such tests to address a wide variety of medical disorders; the manner in which gait laboratories are organized, tests are performed, and reports generated; and the clinical understanding and expectations of laboratory results. Clinical use is most hampered by the length of time and costs required for performing a study and interpreting it. A “gait” report is lengthy, its data are not well understood, and it includes a clinical interpretation, all of which do not occur with other clinical tests. Current biotechnology research is seeking to address these problems by creating techniques to capture data rapidly, accurately, and efficiently, and to interpret such data by an assortment of modeling, statistical, wave interpretation, and artificial intelligence methodologies. The success of such efforts rests on both our technical abilities and communication between engineers and clinicians.}
+}
+
+
+@article{Peterson2022,
+  title = {Biomechanical and Musculoskeletal Measurements as Risk Factors for Running-Related Injury in Non-elite Runners: A Systematic Review and Meta-analysis of Prospective Studies},
+  volume = {8},
+  ISSN = {2198-9761},
+  url = {http://dx.doi.org/10.1186/s40798-022-00416-z},
+  DOI = {10.1186/s40798-022-00416-z},
+  number = {1},
+  journal = {Sports Medicine - Open},
+  publisher = {Springer Science and Business Media LLC},
+  author = {Peterson,  Benjamin and Hawke,  Fiona and Spink,  Martin and Sadler,  Sean and Hawes,  Morgan and Callister,  Robin and Chuter,  Vivienne},
+  year = {2022},
+  month = mar 
+}
+
+@article{Guan2022,
+  title = {Association between Inter-Limb Asymmetries in Lower-Limb Functional Performance and Sport Injury: A Systematic Review of Prospective Cohort Studies},
+  volume = {11},
+  ISSN = {2077-0383},
+  url = {http://dx.doi.org/10.3390/jcm11020360},
+  DOI = {10.3390/jcm11020360},
+  number = {2},
+  journal = {Journal of Clinical Medicine},
+  publisher = {MDPI AG},
+  author = {Guan,  Yanfei and Bredin,  Shannon and Taunton,  Jack and Jiang,  Qinxian and Wu,  Nana and Warburton,  Darren},
+  year = {2022},
+  month = jan,
+  pages = {360}
+}
+
+@article{Kokkotis2022,
+  title = {Leveraging explainable machine learning to identify gait biomechanical parameters associated with anterior cruciate ligament injury},
+  volume = {12},
+  ISSN = {2045-2322},
+  url = {http://dx.doi.org/10.1038/s41598-022-10666-2},
+  DOI = {10.1038/s41598-022-10666-2},
+  number = {1},
+  journal = {Scientific Reports},
+  publisher = {Springer Science and Business Media LLC},
+  author = {Kokkotis,  Christos and Moustakidis,  Serafeim and Tsatalas,  Themistoklis and Ntakolia,  Charis and Chalatsis,  Georgios and Konstadakos,  Stylianos and Hantes,  Michael E. and Giakas,  Giannis and Tsaopoulos,  Dimitrios},
+  year = {2022},
+  month = apr 
+}
+
+
+@article{Sadr2025,
+  title = {Predicting athletic injuries with deep Learning: Evaluating CNNs and RNNs for enhanced performance and Safety},
+  volume = {105},
+  ISSN = {1746-8094},
+  url = {http://dx.doi.org/10.1016/j.bspc.2025.107692},
+  DOI = {10.1016/j.bspc.2025.107692},
+  journal = {Biomedical Signal Processing and Control},
+  publisher = {Elsevier BV},
+  author = {Sadr,  Mohammad Mohsen and Khani,  Mohsen and Tootkaleh,  Saeb Morady},
+  year = {2025},
+  month = jul,
+  pages = {107692}
+}
