Fix bibliography + objective 3

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -575,3 +575,15 @@ abstract = {The technology supporting the analysis of human motion has advanced 
   month = jul,
   pages = {107692}
 }
+
+
+@article{vanGent2007,
+  title = {Incidence and determinants of lower extremity running injuries in long distance runners: a systematic review},
+  volume = {41},
+  number = {8},
+  journal = {British Journal of Sports Medicine},
+  author = {van Gent, Rene N. and Siem, Douwe and van Middelkoop, Marienke and van Os, Arnoud G. and Bierma-Zeinstra, Sita M. A. and Koes, Bart W.},
+  year = {2007},
+  pages = {469--480},
+  doi = {10.1136/bjsm.2006.033548}
+}
